	#IP-1397 MySQL "SET PASSWORD" deprecated in version 5.7.6
	#IP-1453 The before/after HttpdAddIps events are not always triggered
	#IP-1482 Add support for MySQL 5.6.x/5.7.x using MySQL Team repositories
	#IP-1483 Perl 5.22 - Unescaped left brace in regex is deprecated
	#IP-1486 Do not place order when a domain alias is created by a mutated user

------------------------------------------------------------------------------------------------------------------------
1.2.11
------------------------------------------------------------------------------------------------------------------------

2016-01-06: Laurent Declercq
	RELEASE i-MSCP 1.2.11

BACKEND
	Fixed: Could not remove service (wrong return value)
	Fixed: iMSCP::Rights::_set: cmod: cannot access '/etc/courier/dhparams.pem' : No such file or directory
	Fixed: Missing variable in sprintf statement (iMSCP::Dir)
	Fixed: Optionnal options must be passed-in to onLoadTemplate listeners (httpd server impls.)

CONFIG
	Removed: ProxyErrorOverride parameter which was introduced in version 1.2.10 (Unexpected 503 errors +++)

PLUGINS
	Updated: API version to 1.0.1

------------------------------------------------------------------------------------------------------------------------
1.2.10
------------------------------------------------------------------------------------------------------------------------

2015-12-27: Laurent Declercq
	RELEASE i-MSCP 1.2.10

FRONTEND
	Fixed: 404 error on user statistics page (reseller level)
	Fixed: Wrong issue tracker links in admin/database_update.php

BACKEND
	Fixed: Could not restore domain (undefined variable)
	Fixed: Missing parameter for onLoadTemplate event (imscp.cnf)

YOUTRACK
	#IP-1386 Length of password generator is hardcoded
	#IP-1388 phptmp removed on client update
	#IP-1391 imscp_panel service can fail to start/restart when the APCU PHP extension is installed
	#IP-1393 Unable to disable backup feature for existing domains